# Deals-Coupons-AI

./: .env.large-task  .env.qa-testing  .env.quick-task  .env.template  .gitignore  CLAUDE.md  README.md  SKILLS_SUMMARY.md  admin-panel.html  c.bat  ccd.bat  index.html  issues.jsonl  list_tables.sql  package-lock.json  package.json  playwright.config.js  playwright.config.production.js  pyproject.toml  seller-dashboard.html  start_deal_sniper.bat  vercel.json
blog/: index.html  style.css
deal_sniper_ai/: pm2.config.js
deal_sniper_ai/affiliate_engine/: README.md
deal_sniper_ai/config/: config.yaml  personas.json
deal_sniper_ai/crawler/: ecommerce_crawler.py
deal_sniper_ai/growth_engine/: README.md  blog_writer.py  tasks.py
deal_sniper_ai/growth_engine/blog/: index.html
deal_sniper_ai/posting_engine/: README.md
deal_sniper_ai/scheduler/: celery_app.py
deal_sniper_ai/signal_scraper/: README.md
qa/: agent.js  crawler.js
scripts/: backup_database.sh  deploy-no-docker.sh  start_sniper.py  test_live_post.py
scripts/monitoring/: alerts.yml  grafana_dashboard.json  prometheus.yml
scripts/systemd/: deal-sniper-api.service  deal-sniper-beat.service  deal-sniper-worker.service
skills/: README.md  playwright-testing.md  supabase-cli.md  token-optimization.md  vercel-deployment.md
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 005_social_expansion.sql  20250317200000_initial_schema.sql  20250318000000_deal_sniper_schema.sql  20250319000000_growth_engine_schema.sql  20250320000000_anti_blocking_schema.sql  combined_migration.sql
tests/: example.spec.js  smoke.spec.js
tests/integration/: README.md
